opam-version: "2.0"
maintainer: "Frederic Bour <frederic.bour@lakaban.net>"
authors: "Frederic Bour <frederic.bour@lakaban.net>"
homepage: "https://github.com/let-def/wall"
bug-reports: "https://github.com/let-def/wall"
license: "BSD3"
dev-repo: "git+https://github.com/let-def/wall.git"
build: [
  ["jbuilder" "build" "--only" "wall" "--root" "." "-j" jobs "@install"]
]
depends: [
  "ocamlfind" {build}
  "gg" "result" "stb_image" "grenier"
  "stb_truetype" { >= "0.5" }
]
