opam-version: "1.2"
maintainer: "Frédéric Bour <frederic.bour@lakaban.net>"
authors: "Frédéric Bour <frederic.bour@lakaban.net>"
homepage: "https://github.com/let-def/wall"
bug-reports: "https://github.com/let-def/wall"
license: "BSD3"
dev-repo: "git+https://github.com/let-def/wall.git"
tags: []
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build}
  "gg" "result" "stb_image" "grenier"
  "stb_truetype" { >= "0.5" }
  "conf-gles2"
]
