opam-version: "2.0"
maintainer: "Frédéric Bour <frederic.bour@lakaban.net>"
authors: "Frédéric Bour <frederic.bour@lakaban.net>"
homepage: "https://github.com/let-def/wall"
bug-reports: "https://github.com/let-def/wall"
license: "BSD3"
dev-repo: "git+https://github.com/let-def/wall.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"
  "jbuilder" {build}
  "gg"
  "result"
  "stb_image"
  "grenier"
  "stb_truetype" {>= "0.5"}
  "conf-gles2"
]

synopsis: "Realtime Vector Graphics with OpenGL"

description:
  "Lightweight, fast and declarative vector graphics rasterization using OpenGL."
