(library
 (name wall)
 (flags -w -40 -w +26)
 (public_name wall)
 (wrapped false)
 (foreign_stubs
  (language c)
  (names wall__backend_stubs)
  (flags -g -O2 (:include c_flags.sexp)))
 (c_library_flags (:include c_library_flags.sexp))
 (libraries gg result stb_image stb_truetype grenier.binpacking))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action  (run ./config/discover.exe)))
